Add Devito example

--- a/docker/Dockerfile.omp_offload
+++ b/docker/Dockerfile.omp_offload
@@ -3,6 +3,7 @@
 # Uncomment line "self.cflags += ['-Xopenmp-target', '-march=sm_37']" in devito/arch/compiler.py and change sm_37 for sm_XX where XX is the compute capability of your GPU
 # sudo docker build -t devito/ompoffload:1.0 -f docker/Dockerfile.omp_offload .
 # sudo docker run --gpus all --rm -it devito/ompoffload:1.0
+# python examples/seismic/acoustic/acoustic_example.py
 
 FROM nvidia/cuda:10.1-devel-ubuntu18.04
 
