--- a/docker/Dockerfile.nvidia
+++ b/docker/Dockerfile.nvidia
@@ -32,7 +32,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -y && \
     apt-get install -y -q \
         apt-utils curl\   
-        vim && \
+        vim g++-multilib gcc-multilib wget cmake && \
     curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
     apt-get install -y -q \
         nodejs \
@@ -83,6 +83,22 @@ ENV CUDA_HOME $HPCSDK_HOME/cuda
 ENV CUDA_ROOT $HPCSDK_HOME/cuda/bin
 ENV PATH $HPCSDK_HOME/compilers/bin:$HPCSDK_HOME/cuda/bin:$HPCSDK_HOME/comm_libs/mpi/bin:${PATH}
 ENV LD_LIBRARY_PATH $HPCSDK_HOME/cuda/lib:$HPCSDK_HOME/cuda/lib64:$HPCSDK_HOME/compilers/lib:$HPCSDK_HOME/math_libs/lib64:$HPCSDK_HOME/comm_libs/mpi/lib:$HPCSDK_CUPTI/lib64:bitcomp_DIR:${LD_LIBRARY_PATH}
+
+## INSTALL CLANG 13
+RUN wget -q https://github.com/llvm/llvm-project/archive/refs/tags/llvmorg-13.0.0.tar.gz
+RUN tar -xf llvmorg-13.0.0.tar.gz
+WORKDIR /llvm-project-llvmorg-13.0.0
+RUN mkdir build
+WORKDIR /llvm-project-llvmorg-13.0.0/build
+RUN cmake ../llvm/ -DCMAKE_BUILD_TYPE=Release -DLLVM_TARGETS_TO_BUILD="X86;NVPTX" -DLLVM_ENABLE_PROJECTS="clang" -DLLVM_ENABLE_RUNTIMES="openmp" -DCMAKE_INSTALL_PREFIX=/llvm13
+RUN make -j $(( $(lscpu | awk '/^Socket\(s\)/{ print $2 }') * $(lscpu | awk '/^Core\(s\) per socket/{ print $4 }') ))
+RUN make install
+
+WORKDIR /
+RUN rm -rf llvmorg-13.0.0.tar.gz llvm-project-llvmorg-13.0.0
+ENV PATH /llvm13/bin:${PATH}
+ENV LD_LIBRARY_PATH /llvm13/lib:${LD_LIBRARY_PATH}
+
 
 ADD ./requirements.txt /app/requirements.txt
 ADD ./requirements-optional.txt /app/requirements-optional.txt
@@ -149,8 +165,8 @@ RUN chmod +x /print-defaults /jupyter /tests /docker-entrypoint.sh && \
 ## Environment Variables for OpenACC Builds
 # Reference: https://github.com/devitocodes/devito/wiki/FAQ#can-i-manually-modify-the-c-code-generated-by-devito-and-test-these-modifications
 # Set arch to PGI (pgcc)
-ENV DEVITO_ARCH="nvc" 
-ENV DEVITO_LANGUAGE="openacc"
+ENV DEVITO_ARCH="clang" 
+ENV DEVITO_LANGUAGE="openmp"
 ENV DEVITO_PLATFORM=nvidiaX
 # Options: [unset, 1] For PGI openacc; Should only be set after a first execution of the benchmark
 # ENV DEVITO_JIT_BACKDOOR=1 
@@ -172,14 +188,13 @@ RUN mkdir -p /app && \
     useradd -r -g app -d /app -s /sbin/nologin -c "Docker image user" app && \
     chown -R app:app $APP_HOME && \
     chown app:app /docker-entrypoint.sh && \
-    chown app:app /print-defaults && \
-    chown app:app /tests && \
-    chown app:app /jupyter
+    # chown app:app /print-defaults && \
+    chown app:app /tests
+    # chown app:app /jupyter
     
 # Change to the app user.
 USER app
 WORKDIR /app
 
-EXPOSE 8888
 ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["/jupyter"]
+CMD ["/bin/bash"]
