--- a/docker/Dockerfile.nvidia_86_ci
+++ b/docker/Dockerfile.nvidia_86_ci
@@ -89,7 +89,7 @@ RUN git checkout fee90542326bc1d81ba684bfc0a2cd21cb04e650
 RUN mkdir build
 WORKDIR /llvm-project/build
 RUN ls
-RUN cmake ../llvm/ -DLLVM_TARGETS_TO_BUILD="X86;NVPTX" -DLLVM_ENABLE_PROJECTS="clang" -DLLVM_ENABLE_RUNTIMES="libcxx;libcxxabi;openmp;compiler-rt" -DCMAKE_INSTALL_PREFIX=/llvm13 -DLIBOMPTARGET_NVPTX_COMPUTE_CAPABILITIES=86 -DCLANG_OPENMP_NVPTX_DEFAULT_ARCH=sm_86  -DOPENMP_ENABLE_LIBOMPTARGET=ON
+RUN cmake ../llvm/ -DLLVM_TARGETS_TO_BUILD="X86;NVPTX" -DLLVM_ENABLE_PROJECTS="clang" -DLLVM_ENABLE_RUNTIMES="libcxx;libcxxabi;openmp" -DCMAKE_INSTALL_PREFIX=/llvm13 -DOPENMP_ENABLE_LIBOMPTARGET=ON
 RUN make -j 4
 RUN make install
 
